# vortex-rdf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmark.py  dbpedia_gen.py  t.py
.github/: dependabot.yml  renovate.json
.github/workflows/: bench-dashboard.yml  ci.yml  codspeed.yml  codspeed.yml.bkp
benchmark_results/dbpedia_10M/csv/: match_summary_dbpedia_10M.csv  summary_dbpedia_10M.csv
benchmark_results/dbpedia_5M/csv/: match_summary_dbpedia_5M.csv  summary_dbpedia_5M.csv
benchmark_vortex_only_results/: events.jsonl
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: benchmark.rs  chained_hash_bench.rs  simple_dict_bench.rs
core/src/: de.rs  error.rs  lib.rs  ser.rs
core/src/common/: formats.rs  indexes.rs  mod.rs  utils.rs
core/src/index/: chained_hash.rs  mod.rs  simple_dictionary.rs  simple_dictionary_view.rs
core/src/io/: cottas_native.rs  cottas_native_ids.rs  cottas_native_strings.rs  cottas_native_strings_with_object_index.rs  de.rs  mod.rs  ser.rs  utils.rs
core/src/store/: chained_hash_store.rs  cottas_vortex_store.rs  dictionary.rs  dictionary_store.rs  mod.rs  selection.rs  simple_dictionary_store.rs  vortex_rdf_store.rs
core/src/store/builders/: chunk_sort.rs  global_sort.rs  mod.rs  sorted_in_memory.rs  sorted_stream.rs  spill.rs  unsorted_in_memory.rs  unsorted_stream.rs
core/src/store/indexes/: mod.rs  secondary_by_copy.rs  secondary_by_reference.rs
core/src/store/layout/: cottas.rs  flat.rs  mod.rs
core/src/store/layouts/: default.rs  dictionary.rs  mod.rs  term_dictionary.rs  typed_object.rs
core/src/utils/: mod.rs
core/tests/: cottas_native.rs  cottas_native_strings.rs
js/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
js/bench/: handles.bench.mjs
js/entry/: browser.d.ts  browser.js  node.d.ts  node.js
js/js-snippets/: lazy-rdf.js
js/src/: lib.rs
js/test/: bindings.test.ts  store.test.ts
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/vortex_rdflib/: __init__.py  duckdb_backend.py  store.py
scripts/: bench_dashboard_template.html  ci-check.sh  install-git-hooks.sh  render_bench_dashboard.py
scripts/DBBench/: compare_dbbench_counts.py  compare_dbbench_engine_timings.py  dbbench_rdflib_benchmark.py  run_all_dbbench_engines.sh  run_big_dbbench_engines.sh
scripts/hooks/: pre-push
scripts/simple_vortex_benchmarks/: benchmark.py  benchmark_barplots.py  benchmark_vortex_diagnostics.py  benchmark_vortex_json.py
scripts/utils/: dbpedia_gen.py  extract_code.py  smoke_compare_enignes.py
