[package]
name = "vortex-rdf-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
# The format engine
serde.workspace = true
serde_json.workspace = true
vortex.workspace = true
vortex-array.workspace = true
vortex-error.workspace = true
vortex-ipc.workspace = true
vortex-io.workspace = true
vortex-session.workspace = true
vortex-fsst.workspace = true
vortex-mask.workspace = true
vortex-layout.workspace = true
vortex-file.workspace = true
vortex-scan.workspace = true
vortex-btrblocks = { workspace = true }
async-trait.workspace = true
async-stream.workspace = true
tempfile.workspace = true

tokio.workspace = true

# RDF handling
oxrdf.workspace = true
oxrdfio.workspace = true

# Utilities
itertools.workspace = true
thiserror.workspace = true

futures.workspace = true
log = "0.4.29"
clap.workspace = true
mimalloc.workspace = true

[features]
default = ["file-io"]
file-io = ["vortex-io/tokio", "vortex/zstd", "vortex/files"]

[dev-dependencies]
divan = { version = "*", package = "codspeed-divan-compat" }
tokio = { workspace = true, features = ["time", "rt-multi-thread"] }


[[bench]]
name = "simple_dict_bench"
harness = false

[[bench]]
name = "chained_hash_bench"
harness = false
