[package]
name = "vortex-rdf-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
# The format engine
vortex.workspace = true
vortex-array.workspace = true
vortex-error.workspace = true
vortex-ipc.workspace = true
vortex-io.workspace = true
vortex-session.workspace = true
vortex-fsst.workspace = true
vortex-mask.workspace = true
vortex-layout.workspace = true
vortex-file.workspace = true
vortex-scan.workspace = true
vortex-buffer.workspace = true
vortex-btrblocks = { workspace = true }

tokio.workspace = true

# RDF handling
oxrdf.workspace = true
oxrdfio.workspace = true

# Utilities
itertools.workspace = true
thiserror.workspace = true
uuid = { version = "1", features = ["v4"] }
rkyv = { version = "0.8.17", features = ["std", "bytecheck"] }
serde = { version = "1.0", features = ["derive"] }

futures.workspace = true
log = "0.4.33"
clap.workspace = true
web-time = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc.workspace = true

[features]
default = ["file-io"]
file-io = ["vortex-io/tokio", "vortex/zstd", "vortex/files", "vortex-file/tokio"]

[dev-dependencies]
divan = { version = "*", package = "codspeed-divan-compat" }
tokio = { workspace = true, features = ["time", "rt-multi-thread"] }

[[bench]]
name = "benchmark"
harness = false
