[package]
name = "vortex-rdf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vortex-rdf-core = { path = "../core", default-features = false }
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
js-sys.workspace = true
futures.workspace = true
console_error_panic_hook.workspace = true
getrandom = { workspace = true, features = ["js"] }
oxrdf.workspace = true
oxrdfio.workspace = true
vortex-array.workspace = true
vortex-dtype.workspace = true
vortex.workspace = true

[dependencies.web-sys]
version = "0.3"
features = ["console"]
