[package]
name = "vortex-rdf-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "vortex_rdf_native"
crate-type = ["cdylib"]

[dependencies]
vortex-rdf-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
pyo3 = { workspace = true, features = ["extension-module"] }